fixed the height on mobile devices on the initial page

--- a/src/components/GameSettingsAndRules/GameSettingsAndRules.css
+++ b/src/components/GameSettingsAndRules/GameSettingsAndRules.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 1000px) {
   .game-rules-settings {
-    height: 85dvh;
+    /* height: 85dvh; */
     padding: 1rem;
   }
 
